# codelens

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  budget.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  lighthouse.yml
apps/api-hf/: Dockerfile  Dockerfile.cloudrun  README.md  cloudbuild.yaml  hunk_index.faiss  main.py  requirements.txt
apps/api-vertex/: Dockerfile  cloudbuild.yaml  main.py  requirements.txt
apps/web/: next.config.ts  package.json
apps/web-solid/: package-lock.json  package.json  tsconfig.app.json  vercel.json
apps/web-solid/api/: github.ts
apps/web-solid/api/github/: [...path].ts  index.ts
apps/web-solid/docs/: bundle-report.html
apps/web-solid/src/: index.css  index.tsx  router.tsx
apps/web-solid/src/components/: AuthGuard.tsx  CommandPalette.tsx  ErrorBoundary.tsx  KeyboardShortcutsModal.tsx  Nav.tsx  PresenceBar.tsx  RateLimitBar.tsx  ScoreBadge.tsx
apps/web-solid/src/hooks/: queries.ts  usePartyKit.ts
apps/web-solid/src/lib/: github.ts  ml.ts  vitals.ts
apps/web-solid/src/pages/: DashboardPage.tsx  PRReviewPage.tsx
apps/web/e2e/: auth.spec.ts  commenting.spec.ts  keyboard.spec.ts  ml-integration.spec.ts
docs/: api.md  architecture.md  bundle-report.html  ml-results.md  openapi.json
e2e/: production.spec.ts
infra/partykit/: package.json  partykit.json
ml/eval/: ablation.py  baselines.py  benchmark.py  conftest.py  metrics.py  results.json  results_table.md  run_eval.py  test_metrics.py
ml/models/: export_onnx.py  quantize.py  train.py
(+30 files in other folders)
